# Dream_EndCap_analysis

./: CMakeLists.txt  LICENSE  README.md
data/: README
documentation/: DREAM-vonPOWTEX SUMOx-Voxelpositionen26.06.19_withtranslationSumo6.xlsx  LookupTableDreamEndCap.txt  sumo_voxel_map_20190711.csv
src/: BUILDING.md  CMakeLists.txt  CreateCDTRootFile  CreateCDTTree.C  CreateCDTTree.cpp  FitPeaks.C  Geometry.cpp  Geometry.h  GeometryTest.cpp  Makefile  README.md  README.txt  analysis  analysis_cdt.C  analysis_cdt.cpp  analysis_cdt.h  data_for_root.txt  endcap_lookup.root  plotBranches.C  read_bin  read_bin_irina.cpp
